--- a/ExpenseTrackerDjango/app/templates/app/EnterExpense.html
+++ b/ExpenseTrackerDjango/app/templates/app/EnterExpense.html
@@ -11,14 +11,14 @@
             {% csrf_token %}
             <div class="form-group">
                 <label for="expense_amount" class="control-label">Amount: </label>
-                <input id="expense_amount" type="text" name="expense_amount" class="form-control" value="{{ expense.amount }}" />
+                <input id="expense_amount" type="text" name="expense_amount" class="form-control" value="{{expense.amount}}" />
             </div>
             <div class="form-group">
                 <label for="category_name" class="control-label">Category: </label>
                 <select id="category_name" type="text" name="category_name" class="form-control">
                     <option selected disabled="true">-- Categories --</option>
                     {% for cat in category%}
-                    <option>{{cat.id}} - {{cat.name}}</option>
+                    <option>{{cat.name}}</option>
                     {% endfor %}
                 </select>
             </div>
