--- a/ExpenseTrackerDjango/app/templates/app/History.html
+++ b/ExpenseTrackerDjango/app/templates/app/History.html
@@ -5,4 +5,35 @@
 <h2>{{ title }}</h2>
 <h3>{{message}}</h3>
 
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                Date
+            </th>
+            <th>
+                Category
+            </th>
+            <th>
+                Amount
+            </th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for expense in expenses %}
+        <tr>
+            <td>
+                {{expense.date}}
+            </td>
+            <td>
+                {{expense.category.name}}
+            </td>
+            <td>
+                {{expense.amount}}
+            </td>
+        </tr>
+        {%endfor%}
+    </tbody>
+</table>
+
 {% endblock %}
