--- a/ExpenseTrackerDjango/app/templates/app/AddAlerts.html
+++ b/ExpenseTrackerDjango/app/templates/app/AddAlerts.html
@@ -5,4 +5,37 @@
 <h2>{{ title }}</h2>
 <h3>{{message}}</h3>
 
+<div class="row">
+    <div class="col-md-4">
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="alert_amount" class="control-label">Max Amount: </label>
+                <input id="alert_amount" type="text" name="alert_amount" class="form-control" value="0.00" />
+            </div>
+            <div class="form-group">
+                <label for="category_name" class="control-label">Category: </label>
+                <select id="category_name" type="text" name="category_name" class="form-control">
+                    <option selected disabled="true">-- Categories --</option>
+                    {% for cat in category%}
+                    <option>{{cat.name}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="period_name" class="control-label">Period: </label>
+                <select id="period_name" type="text" name="period_name" class="form-control">
+                    <option selected disabled="true">-- Periods --</option>
+                    {% for per in period%}
+                    <option>{{per.name}}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-success" />
+            </div>
+        </form>        
+    </div>
+</div>
+
 {% endblock %}
