--- a/ExpenseTrackerDjango/app/templates/app/EnterExpense.html
+++ b/ExpenseTrackerDjango/app/templates/app/EnterExpense.html
@@ -3,7 +3,15 @@
 {% block content %}
 
 <h2>{{ title }}</h2>
-<h3>{{message}}</h3>
+<h3>{{page_message}}</h3>
+
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li style='color: red;' {% if message.tags %} class=" {{ message.tags }} " {% endif %}> {{ message }} </li>
+    {% endfor %}
+</ul>
+{% endif %}
 
 <div class="row">
     <div class="col-md-4">
@@ -11,7 +19,7 @@
             {% csrf_token %}
             <div class="form-group">
                 <label for="expense_amount" class="control-label">Amount: </label>
-                <input id="expense_amount" type="text" name="expense_amount" class="form-control" value="{{expense.amount}}" />
+                <input id="expense_amount" type="text" name="expense_amount" class="form-control" value="0.00" />
             </div>
             <div class="form-group">
                 <label for="category_name" class="control-label">Category: </label>
