Sign Up Page Added. User information is stil shared across the website

--- a/ExpenseTrackerDjango/app/templates/app/layout.html
+++ b/ExpenseTrackerDjango/app/templates/app/layout.html
@@ -32,6 +32,9 @@
                     <li><a href="{% url 'AddAlerts' %}">Create Alerts</a></li>
                 </ul>
                 {% include 'app/loginpartial.html' %}
+                <ul class="nav navbar-nav">
+                    <li><a href="{% url 'SignUp' %}">Sign Up</a></li>
+                </ul>
             </div>
         </div>
     </div>
